# OpenRGBHidioPlugin

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  OpenRGBHIDIOPlugin.cpp  OpenRGBHIDIOPlugin.h  OpenRGBHidioPlugin.cpp  OpenRGBHidioPlugin.h  OpenRGBHidioPlugin.pro  OpenRGBSamplePlugin.cpp  OpenRGBSamplePlugin.h  OpenRGBSamplePlugin.pro  README.md  qmldir  readme.md  resources.qrc
qml/: main.qml
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
scripts/: scripts_build-plugin.sh
