[package]
name = "openrgb-sample-plugin-rust"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.5"
cxx-qt-lib = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cxx-qt-build = "0.5"
