[package]
name = "openrgb-hidio-plugin-rust"
version = "0.1.0"
authors = ["Jacob Alexander <haata@kiibohd.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.5"
cxx-qt-lib = "0.5"
hid-io-client = "0.1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["net", "rt-multi-thread", "macros", "sync", "time", "rt"] }
tokio-rustls = { version = "0.24" }
tokio-util   = { version = "0.7", features = ["compat"] }

[build-dependencies]
cxx-qt-build = "0.5"
